[gd_scene load_steps=4 format=3 uid="uid://cnmu4k37qncn8"]

[ext_resource type="PackedScene" uid="uid://b5cd6sa8qq4vc" path="res://addons/maaacks_game_template/base/scenes/overlaid_menu/menus/pause_menu.tscn" id="1_fd1e4"]
[ext_resource type="Script" uid="uid://4ieefgkpqugj" path="res://scenes/overlaid_menus/pause_menu.gd" id="2_o57rn"]
[ext_resource type="PackedScene" uid="uid://65shnbd3xtxu" path="res://scenes/overlaid_menus/mini_options_overlaid_menu.tscn" id="3_hewsk"]

[node name="PauseMenu" instance=ExtResource("1_fd1e4")]
auto_translate_mode = 1
script = ExtResource("2_o57rn")
options_packed_scene = ExtResource("3_hewsk")

[node name="TitleLabel" parent="MenuPanelContainer/MarginContainer/BoxContainer/TitleMargin" index="0"]
auto_translate_mode = 1
text = "paused_menu_title"

[node name="CloseButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="0"]
text = "shift_summary_continue"

[node name="RestartButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="1"]
text = "shift_summary_restart"

[node name="OptionsButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="2"]
text = "main_menu_options"

[node name="MainMenuButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="3"]
text = "shift_summary_main_menu"

[node name="ExitButton" parent="MenuPanelContainer/MarginContainer/BoxContainer/MenuButtonsMargin/MenuButtons" index="4"]
text = "main_menu_exit"
